# cg-solar-system

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
.github/workflows/: cmake.yml  typst.yml
assets/models/: bezier_1.3d  bezier_10.3d  bezier_5.3d  box_2_3.3d  comet_10.3d  cone.3d  cone_1_2_4_3.3d  cube.3d  cylinder.3d  cylinder_1_2_20.3d  cylinder_1_2_5.3d  plane.3d  plane_2_3.3d  sphere.3d  sphere_1_10_10.3d  sphere_1_20_20.3d  sphere_1_8_8.3d  torus.3d
assets/patches/: comet.patch  teapot.patch
assets/planets/: planets.csv  satellites.csv
assets/scenes/: box.xml  box_rotation.xml  cone_scene.xml  cylinder.xml  julio_solar_system.xml  plane.xml  solar_system.xml  sphere_and_plane.xml  sphere_scene.xml  test.xml  test_1_1.xml  test_2_1.xml  test_2_2.xml  test_2_3.xml  test_2_4.xml  test_3_1.xml  test_3_2.xml  test_4_1.xml  test_4_2.xml  test_4_3.xml  test_4_4.xml  test_4_5.xml  test_4_6.xml
common/: Color.h  Mat.cpp  Mat.h  Utils.cpp  Utils.h  Vec.h  World.cpp  World.h  WorldSerde.cpp  WorldSerde.h
engine/: CMakeLists.txt
engine/src/: Engine.cpp  Engine.h  EngineImGui.cpp  Frustum.cpp  Frustum.h  Input.h  Model.cpp  Model.h  Utils.cpp  Utils.h  World.cpp  World.h  main.cpp
generator/: CMakeLists.txt
generator/src/: Bezier.cpp  Bezier.h  Generator.cpp  Generator.h  SolarSystem.cpp  SolarSystem.h  main.cpp
reports/src/: bibliography.bib  fase1.typ  fase2.typ  fase3.typ  fase4.typ  template.typ
reports/src/fase1/: 3d.typ
src/: Engine.cpp  Engine.h  Model.cpp  Model.h  Vec.h  World.cpp  World.h  main.cpp  test.cpp  test.h
